--- a/talks/2020/fosdem-advancing-science-with-dataverse.mdwn
+++ b/talks/2020/fosdem-advancing-science-with-dataverse.mdwn
@@ -4,3 +4,5 @@ The talk is on [YouTube][] and my [slides][] are available on the FOSDEM website
 
 [YouTube]: https://twitter.com/philipdurbin/status/1224245828971388930
 [slides]: https://fosdem.org/2020/schedule/event/dataverse/
+
+Thank you, everyone, for coming. Again, my name is Philip Durbin. I'm a software developer at Harvard University. This is a picture of our campus. We're across the river from Boston in the United States.
