done with Findable

--- a/talks/2020/fosdem-advancing-science-with-dataverse.mdwn
+++ b/talks/2020/fosdem-advancing-science-with-dataverse.mdwn
@@ -42,3 +42,11 @@ You can see that we like to share code and we are seeing that researchers are wi
 This pyramid is a diagram that's based on a tweet storm by Brian Nosek from the Center for Open Science and what it means to me is that first we had to build the ability to share data at all. That's at the bottom. Then, projects like Dataverse have come along to hopefully improve the user experience for sharing data. I stopped by the Open Source Design table this morning and efforts like that are great. Let's not just have open source software. Let's make the software usable. Let's make it painless to share data.
 
 As we go up the pyramid what we're seeing now is some cultural change. Again, the reviewer of the paper is the one who said, "Hey, you should make your dataset a first class, citable, scholarly object." That's great. That's exactly what we've been trying to do for years, is get there where it becomes a good scientific practice to share your data with the world.
+
+Increasingly, funding these days often requires you to share your data, so university libraries and other places have a reason to install research data repository software like Dataverse so that they can have a place for the community to share their data. Also, I'll mention that on the journal side, the places that are publishing these academic papers, they are now giving incentives to researchers to share their data. They're trying to also move research toward more openness and more sharing of data. 
+
+Now I'd like to step you through quickly this concept we have in my world of what we call the FAIR Data Principles. FAIR is an acronym that stands for Findable, Accessible, Interoperable, and Reusable.
+
+Let's start with Findable. Part of the idea with putting data in a repository like Dataverse is that other scientists can find your work and reuse your work. When you publish a dataset in we sent metadata, that's data about data, across the wire to a nonprofit called DataCite. This is an aggregator of all sorts of scientific data. A new player on the scene is Google. They have just brough out of beta last week or the week before a tool called Google Dataset Search. We've been working closely with them and putting all the right technology in place so that they can easily crawl installations of Dataverse find the title, the author, the description, and make them all available in their new tool. This third one is from a project called SHARE that's another effort within academia to make more findable. In this case they use the Dataverse Search API to pull in the latest records all the time.
+
+
